force-app/main/default/objects/leaseworks__GL_Account_Code__c/leaseworks__GL_Account_Code__c.object-meta.xml
<CustomObject>
    <description>Object that maps the GL Accounts to Codes</description>
    <label>GL Account Code</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Account Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>