force-app/main/default/objects/leaseworks__GL_Account_Code__c/fields/leaseworks__Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Code__c</fullName>
    <description>Indicates the category of the account code like Income, Receivable, Expense, Payable etc</description>
    <inlineHelpText>Indicates the category of the account code like Income, Receivable, Expense, Payable etc</inlineHelpText>
    <label>Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Codes</valueSetName>
    </valueSet>
</CustomField>