force-app/main/default/objects/leaseworks__GL_Account_Code__c/fields/leaseworks__Debit_Credit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Debit_Credit__c</fullName>
    <label>Debit/Credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>