force-app/main/default/objects/leaseworks__GL_Account_Code__c/fields/leaseworks__Document_Type_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Document_Type_F__c</fullName>
    <formula>TEXT(leaseworks__Transaction_Subtype__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2309 Document Type</label>
    <type>Text</type>
</CustomField>