force-app/main/default/objects/leaseworks__GL_Account_Code__c/fields/leaseworks__GL_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__GL_Account_Code__c</fullName>
    <description>Code for the corresponding GL Account</description>
    <inlineHelpText>Code for the corresponding GL Account</inlineHelpText>
    <label>Z_unused_2001 GL Account</label>
    <length>250</length>
    <type>Text</type>
</CustomField>