force-app/main/default/objects/leaseworks__GL_Account_Code__c/fields/leaseworks__GL_Account_Description__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__GL_Account_Description__c</fullName>
    <description>Formula field to Pull JE description from COA</description>
    <formula>leaseworks__COA__r.leaseworks__GL_Account_Description__c</formula>
    <label>GL Account Description</label>
    <type>Text</type>
</CustomField>