force-app/main/default/objects/leaseworks__GL_Account_Code__c/fields/leaseworks__Include_in_SLR_Calc__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Include_in_SLR_Calc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to include this invoice line item in the SLR calculation. The amount associated with this line item will contribute to the average straight-line rent calculation.</description>
    <inlineHelpText>Check this box to include this invoice line item in the SLR calculation. The amount associated with this line item will contribute to the average straight-line rent calculation.</inlineHelpText>
    <label>Include in SLR Calculation?</label>
    <type>Checkbox</type>
</CustomField>