force-app/main/default/objects/leaseworks__GL_Account_Code__c/fields/leaseworks__Post_On_Head_Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Post_On_Head_Lease__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this accounting entry to be posted to Head Lease?</inlineHelpText>
    <label>_Post To Head Lease?</label>
    <type>Checkbox</type>
</CustomField>