force-app/main/default/objects/leaseworks__GL_Account_Code__c/fields/leaseworks__Receivable_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Receivable_GL_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enter a GL account if you wish to associate a receivable account with this specific invoice line credit code.</description>
    <inlineHelpText>Enter a GL account if you wish to associate a receivable account with this specific invoice line credit code.</inlineHelpText>
    <label>Receivable GL Account</label>
    <referenceTo>leaseworks__Chart_Of_Accounts__c</referenceTo>
    <relationshipLabel>GL Account Codes (Receivable GL Account)</relationshipLabel>
    <relationshipName>Receivable_GL_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>