force-app/main/default/objects/leaseworks__GL_Account_Code__c/validationRules/leaseworks__Do_not_update_auto_checked_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Do_not_update_auto_checked_fields</fullName>
    <active>true</active>
    <description>The auto-checked fields for SLR and unearned Rev should not be unchecked.</description>
    <errorConditionFormula>AND (!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_WFs__c, (OR( (AND( leaseworks__Auto_Checked_Unearned_Rev__c ,! leaseworks__Include_in_Unearned_Rev_Calc__c )),
(AND( leaseworks__Auto_Checked_SLR__c , ! leaseworks__Include_in_SLR_Calc__c )))))</errorConditionFormula>
    <errorMessage>The system automatically enables these options for this transaction and these default settings cannot be overridden.</errorMessage>
</ValidationRule>