force-app/main/default/objects/leaseworks__GL_Account_Code__c/validationRules/leaseworks__GL_Account_Code_For_Receivable_Accounts.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__GL_Account_Code_For_Receivable_Accounts</fullName>
    <active>true</active>
    <description>Only GL accounts linked to Income Codes can have the &quot;Receivable GL account&quot;.</description>
    <errorConditionFormula>AND (!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_WFs__c, NOT(ISPICKVAL(leaseworks__Code__c , &apos;Income Codes&apos;)),(leaseworks__Receivable_GL_Account__c!=null))</errorConditionFormula>
    <errorDisplayField>leaseworks__Receivable_GL_Account__c</errorDisplayField>
    <errorMessage>Only GL accounts linked to Invoice Line Credit Codes can have the &quot;Receivable GL account&quot;.</errorMessage>
</ValidationRule>