force-app/main/default/objects/leaseworks__GL_Account_Code__c/validationRules/leaseworks__GL_Account_Code_For_UnEarnedRev.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__GL_Account_Code_For_UnEarnedRev</fullName>
    <active>true</active>
    <description>Only GL accounts linked to Income Codes can have the &quot;Include in Unearned Revenue Calculation?&quot; checked.</description>
    <errorConditionFormula>AND (!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_WFs__c, NOT(ISPICKVAL(leaseworks__Code__c , &#39;Income Codes&#39;)),leaseworks__Include_in_Unearned_Rev_Calc__c )</errorConditionFormula>
    <errorDisplayField>leaseworks__Include_in_Unearned_Rev_Calc__c</errorDisplayField>
    <errorMessage>Only GL accounts linked to Income Codes can have the &quot;Include in Unearned Revenue Calculation?&quot; checked.</errorMessage>
</ValidationRule>