force-app/main/default/objects/leaseworks__GL_Account_Code__c/validationRules/leaseworks__PostToHLOnlyIfIntercompany.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__PostToHLOnlyIfIntercompany</fullName>
    <active>true</active>
    <errorConditionFormula>AND(leaseworks__Post_On_Head_Lease__c = True, 
 leaseworks__Intercompany__c =false)</errorConditionFormula>
    <errorDisplayField>leaseworks__Post_On_Head_Lease__c</errorDisplayField>
    <errorMessage>You can post to Head Lease only if it is an Intercompany transaction. Either check Intercompany or uncheck Post To Head Lease.</errorMessage>
</ValidationRule>