force-app/main/default/objects/leaseworks__GL_Account_Code__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Accounting_Setup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>